Add location map

--- a/dom-bom/styles.css
+++ b/dom-bom/styles.css
@@ -69,3 +69,10 @@ input:focus {
     width: 200px;
     margin: auto;
 }
+
+#map {
+    position:absolute;
+    top:0px;
+    bottom:0px;
+    width:100%;
+}
